[package]
name = "anyhow_ext"
version = "0.1.0"
edition = "2018"
authors = ["gensmusic <gensmusic@163.com>"]
license = "MIT"
repository = "https://github.com/gensmusic/anyhow_ext.git"
categories = ["error", "anyhow", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
